RedditPosts/RedditPosts/wwwroot/css/site.css
/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
for details on configuring this project to bundle and minify static web assets. */

:root {
    --navbar-bg-color: #1c1c1c;
    --link-color: #0366d6;
    --body-bg-color: #424242;
    --txt-color: white;
    --hor-line-color: #dee2e6;
    --btn-bg-color: black;
    --btn-txt-color: white;
    --btn-hover-bg-color: #545454;
    --carousel-bg-color: #141414;
    --modal-bg-color: black;
    --nav-mobile-img: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

[data-theme="light"] {
    --navbar-bg-color: white;
    --link-color: #0366d6;
    --body-bg-color: white;
    --txt-color: black;
    --hor-line-color: black;
    --btn-bg-color: #dedede;
    --btn-txt-color: black;
    --btn-hover-bg-color: #545454;
    --carousel-bg-color: #141414;
    --modal-bg-color: white;
    --nav-mobile-img: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}

:root {
    --subreddit-logo-diameter: 100px;
    --subreddit-name-top-margin: 30px;
    --icons-grid-colms: auto auto auto;
}

[data-device="mobile"] {
    --subreddit-logo-diameter: 50px;
    --subreddit-name-top-margin: 15px;
    --icons-grid-colms: auto auto;
}

a.navbar-brand {
    white-space: normal;
    text-align: center;
    word-break: break-all;
}

a {
    color: var(--link-color);
}

/* Sticky footer styles
-------------------------------------------------- */
html {
    font-size: 14px;
    position: relative;
    min-height: 100%;
}

@media (min-width: 768px) {
    html {
        font-size: 16px;
    }
}

.border-top {
    border-top: 1px solid #e5e5e5;
}

.border-bottom {
    border-bottom: 1px solid #e5e5e5;
}

.box-shadow {
    box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
}

button.accept-policy {
    font-size: 1rem;
    line-height: inherit;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    white-space: nowrap;
    line-height: 30px;
}

/* Styles */

.navbar {
    background-color: var(--navbar-bg-color) !important;
}

.nav-link, .navbar-brand {
    color: var(--txt-color) !important;
}

.navbar-toggler {
    background-color: var(--btn-bg-color) !important;
}

.navbar-toggler-icon {
    background-image: var(--nav-mobile-img);
}

body {
    /* Margin bottom by footer height */
    margin-bottom: 60px;
    background-color: var(--body-bg-color);
}

/* Source: https://coolestguidesontheplanet.com/videodrome/youtube/ */
.youtube {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px;
    height: 0;
    overflow: hidden;
}

.youtube iframe, .youtube object, .youtube embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

h1, h2, h3, h4, h5, h6, p, div {
    color: var(--txt-color);
}

hr {
    background-color: var(--hor-line-color);
}

btn, button {
    background-color: var(--btn-bg-color);
    color: var(--btn-txt-color);
    border: none;
    outline: none;
    cursor: pointer;
    padding: 5px;
    border-radius: 4px;
}

btn:hover {
    background-color: var(--btn-hover-bg-color);
}

#topScrollBtn, #autoScrollBtn {
    position: fixed;
    bottom: 20px;
    font-size: 18px;
    padding: 15px;
}

#topScrollBtn {
    display: none;
    right: 30px;
    z-index: 99;
}

#autoScrollBtn {
    display: block;
    left: 30px;
    z-index: 98;
}

.hidePostBtn {
    font-size: 18px;
    border: none;
    outline: none;
    background-color: var(--btn-bg-color);
    color: var(--btn-txt-color);
    cursor: pointer;
    border-radius: 4px;
}

.retrieveUpvoteBtn, .updateIconsBtn {
    box-shadow: inset 0px 1px 0px 0px #cf866c;
    background: linear-gradient(to bottom, #d0451b 5%, #bc3315 100%);
    background-color: #d0451b;
    border-radius: 3px;
    border: 1px solid #942911;
    display: inline-block;
    cursor: pointer;
    color: #ffffff;
    font-family: Arial;
    font-size: 13px;
    padding: 6px 24px;
    text-decoration: none;
    text-shadow: 0px 1px 0px #854629;
}

.retrieveUpvoteBtn:hover, .updateIconsBtn:active {
    background: linear-gradient(to bottom, #bc3315 5%, #d0451b 100%);
    background-color: #bc3315;
}

.retrieveUpvoteBtn:active, .updateIconsBtn:active {
	position:relative;
	top:1px;
}

.galleryImg {
    max-width: 80%;
    max-height: 720px;
    width: auto !important;
    height: auto !important;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

.carousel-inner {
    background-color: var(--carousel-bg-color);
}

/* Source for HBox: https://stackoverflow.com/a/11931374 */
#horizontal-box {
    height: 100%;
    width: 100%;
    font-size: 0;
    padding-top: 10px;
}

#left-box, #right-box {
    display: inline-block;
    *display: inline;
    zoom: 1;
    vertical-align: top;
    font-size: 12px;
}

#left-box {
    text-align: right;
    width: 45%;
}

#left-box img {
    margin-right: 5px;
}

#right-box {
    text-align: left;
    width: 55%;
}

#right-box h4 {
    margin-top: var(--subreddit-name-top-margin);
}

.hide_post_modal .modal-dialog .modal-content {
    background-color: var(--modal-bg-color) !important;
}

.reddit-container {
    position: relative;
    overflow: hidden;
    width: 100%;
}

.responsive-iframe {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
}

.subreddit-logo {
    width: var(--subreddit-logo-diameter);
    height: var(--subreddit-logo-diameter);
    clip-path: circle(50% at center);
}

.subreddit-circle {
    border-radius: 50%;
    -moz-border-radius: 50%;
    -webkit-border-radius: 50%;
    color: #FFFFFF;
    display: inline-block;
    font-weight: bold;
    line-height: var(--subreddit-logo-diameter);
    margin-right: 5px;
    text-align: center;
    font-size: 50px;
    width: var(--subreddit-logo-diameter);
}

.grid-container {
    display: grid;
    grid-template-columns: var(--icons-grid-colms);
    width: 75%;
    margin: auto;
}

.grid-item {
    font-size: 30px;
    text-align: center;
    width: 75%;
}

.grid-line {
    width: 75%;
}

#pin-nav-btn {
    padding-left: 10px;
    padding-right: 10px;
    margin-right: 20px;
}

.subreddit-name-display {
    text-overflow: ellipsis;
    width: calc(100%);
    overflow: hidden;
    padding-bottom: 5px;
}

